Developer/src/objects/AWS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AccessKeyId__c</fullName>
        <defaultValue>&quot;----- DUMMY -----&quot;</defaultValue>
        <label>AccessKeyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <defaultValue>&quot;----- DUMMY -----&quot;</defaultValue>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTimeout__c</fullName>
        <defaultValue>10000</defaultValue>
        <description>milli seconds</description>
        <label>RequestTimeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecretAccessKey__c</fullName>
        <defaultValue>&quot;----- DUMMY -----&quot;</defaultValue>
        <label>SecretAccessKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AWS</label>
</CustomObject>